# my-revision-helper

./: .env.example  .gitignore  .railwayignore  ARCHITECTURE.md  AUTH0_SETUP.md  BOOTSTRAP_STATUS.md  DATABASE_SETUP.md  DEBUG_AUTH0.md  DEPLOY_CHECKLIST.md  DEVELOPMENT_NOTES.md  Dockerfile  INTEGRATION_STATUS.md  LANGFUSE_MULTIPLE_CHOICE_PROMPT.md  LANGFUSE_PREP_CHECK_PROMPT.md  LANGFUSE_PROMPTS.md  LANGFUSE_PROMPTS_SUMMARY.md  LANGFUSE_PROMPT_TEXT.md  LANGFUSE_SETUP.md  POST_DEPLOY.md  Procfile  QUICK_FIX_AUTH0.md  RAILWAY_AUTH0_FIX.md  RAILWAY_AUTH_DB_SETUP.md  RAILWAY_DB_CONNECTION.md  RAILWAY_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DOCKER_BUILD_ARGS.md  RAILWAY_ENV_VARS.md  RAILWAY_FIX.md  README.md  README_TESTING.md  SUBJECT_SPECIFIC_PROMPTS.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  VERIFY_AUTH0.md  YOUR_APP_URL.md  build.sh  build.sh.backup  ensure_migrations.py  migrate_add_multiple_choice.py  (+30 more)
frontend/: package-lock.json  package.json  playwright.config.ts
frontend/e2e/: .gitignore  smoke.spec.ts
frontend/public/: README_LOGO.md
frontend/src/: App.tsx  Logo.tsx  auth.ts  index.css  main.tsx
my_revision_helper/: __init__.py  activities.py  api.py  auth.py  cli.py  client_interact.py  client_start.py  database.py  file_processing.py  langfuse_client.py  models.py  models_db.py  storage.py  worker.py  workflows.py
