[project]
name = "my-revision-helper"
version = "0.1.0"
description = "A Temporal-based revision and study assistant"
requires-python = ">=3.13"
dependencies = [
    "temporalio>=1.8.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_revision_helper"]

[tool.uv]
dev-dependencies = []

